# nonebot_xiuxian

liangmo/: .env.prod  README.md  pyproject.toml
liangmo/data/xiuxian/: config.json  config.yaml  items.json  xiuxian.db  境界.json  灵根.json  灵根_beifen.json  突破概率.json
liangmo/data/xiuxian/players/1004657229/: bankinfo.json  boss_fight_info.json  (+1 more)
liangmo/data/xiuxian/work/: 暗杀.json  灵材.json  等级奖励稿.json  镇妖.json
liangmo/data/xiuxian/丹药/: 丹药.json  炼丹丹药.json  炼丹炉.json  药材.json
liangmo/data/xiuxian/修炼物品/: 聚灵旗.json
liangmo/data/xiuxian/功法/: 主功法.json  功法概率设置.json  神通.json
liangmo/data/xiuxian/装备/: 法器.json  防具.json
liangmo/src/nonebot_plugin_xiuxian/: __init__.py  command.py  data_source.py  help.py  player_fight.py  read_buff.py  tests.py  utils.py  xiuxian2_handle.py  xiuxian_config.py
liangmo/src/nonebot_plugin_xiuxian/xiuxian_back/: __init__.py  back_util.py  backconfig.py  config.json  shop.json
liangmo/src/nonebot_plugin_xiuxian/xiuxian_bank/: __init__.py  config.json
liangmo/src/nonebot_plugin_xiuxian/xiuxian_boss/: __init__.py  boss_handle.py  bossconfig.py  config.json  makeboss.py
liangmo/src/nonebot_plugin_xiuxian/xiuxian_buff/: __init__.py
liangmo/src/nonebot_plugin_xiuxian/xiuxian_info/: __init__.py
liangmo/src/nonebot_plugin_xiuxian/xiuxian_mixelixir/: __init__.py  mixelixirutil.py
liangmo/src/nonebot_plugin_xiuxian/xiuxian_rift/: __init__.py  config.json  riftconfig.py  riftmake.py
liangmo/src/nonebot_plugin_xiuxian/xiuxian_sect/: __init__.py  config.json  sectconfig.py
liangmo/src/nonebot_plugin_xiuxian/xiuxian_work/: __init__.py
(+139 files in other folders)
